# system-integration

./: .gitignore  LICENSE  README.md  parse.py
assignments/01._file_format/Node/: main.js  package-lock.json  package.json
assignments/01._file_format/Python/: main.py
assignments/02._serverCom/files/: me.csv  me.json  me.yaml
assignments/02._serverCom/node/: app.js  package-lock.json  package.json
assignments/02._serverCom/python/: main.py  pyproject.toml
assignments/03._OpenAPI/: app.js  package-lock.json  package.json
assignments/03._OpenAPI/routes/: shopRoute.js
assignments/05._sms&mail_integration/mail/: app.js  package-lock.json  package.json
assignments/05._sms&mail_integration/sms/: app.js  package-lock.json  package.json
assignments/06._websockets/client/: client.js  package-lock.json  package.json
assignments/06._websockets/server/: package.json  server.js
assignments/07._SSE/: app.js  package-lock.json  package.json
assignments/08._web_scraper/node/: app.js  currency.db  index.html  package-lock.json  package.json
assignments/mandatory1/: WebhookController.cs
assignments/old/files/: cars.csv  cars.xml  cars.yml
assignments/old/mandatory1/: index.js  package-lock.json  package.json  test.ts
files/: cars.json  cars.txt
lectures/00._Miscellaneous/: getgooglehomepage.sh  stripeiframe.html
lectures/01._modules/html_module/: index.html  index.js  myModule.js
lectures/01._modules/html_no_module/: index.html  index.js  myModule.js
lectures/01._modules/node_commonjs/: index.js  myModule.js
lectures/01._modules/node_esmodules/: index.js  myModule.js
lectures/01._modules/python/: main.py
lectures/02._data_formats/: me.csv  me.json  me.txt  me.xml  me.yaml
lectures/03._encoding/: encoding.py  google.sh
lectures/033._python_environments/: about.txt
lectures/033._python_environments/poetry/: pyproject.toml
lectures/04._basic_servers/node/: app.js
lectures/04._basic_servers/python/: main.py  pyproject.toml
lectures/04._poetry/poetryFolder/: pyproject.toml
lectures/05._basic_servers/node/: package-lock.json
lectures/05._basic_servers/node_basic_server/: app.js  package-lock.json  package.json
lectures/05._basic_servers/python_basic_server/: LICENSE  main.py  pyproject.toml
lectures/05._date/node/: index.js
lectures/05._date/python/: main.py
lectures/06._Server_to_server/node/: app.js
lectures/06._Server_to_server/python/: main.py
lectures/06._date/node/: index.js
lectures/06._date/python/: main.py  pyproject.toml
lectures/07._Server_to_server/node/: app.js
lectures/07._Server_to_server/python/: main.py  pyproject.toml
lectures/07._dotenv/node/: index.js  package.json
lectures/07._dotenv/python/: main.py
lectures/13._github_webhooks/python/: main.py  pyproject.toml
lectures/14._multipart_forms/: index.html
lectures/14._multipart_forms/python/: main.py  pyproject.toml
lectures/18._redis/python/basic_example/: main.py  pyproject.toml
lectures/19._taskQueues/: pyproject.toml
lectures/20._webscraping/: index.html  index.js  package-lock.json  package.json
lectures/20._webscraping/2._web_crawling/: pyproject.toml
lectures/20._webscraping/python/: pyproject.toml
lectures/21._graphql/: app.js  package-lock.json  package.json  schema.graphql
(+40 files in other folders)
