[tool.poetry]
name = "19-taskqueues"
version = "0.1.0"
description = ""
authors = ["William Omø <williamjean.k.o@gmail.com>"]
readme = "README.md"
packages = [{include = "19_taskqueues"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
