[tool.poetry]
name = "05-basic-server"
version = "0.1.0"
description = ""
authors = ["William Omø <williamjean.k.o@gmail.com>"]
readme = "README.md"
packages = [{include = "05_basic_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
