[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["William Omø <williamjean.k.o@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.30.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
